<resources>
    <string name="app_name">FizioApp</string>
    <string name="repeatCount">Количество подходов</string>
    <string name="executionCount">Количество выполнений</string>
    <string name="repeatCountShort">Подходов</string>
    <string name="executionCountShort">Раз</string>
    <string name="weight">Вес</string>
    <string name="afterYear">За год</string>
    <string name="afterMonth">За месяц</string>
    <string name="afterWeek">За неделю</string>
    <string name="no_data">Нет данных</string>
    <string name="exercise">Упражнение</string>
    <string name="settings">Параметры</string>
    <string name="ok">Ok</string>
    <string name="cancel">Отмена</string>
    <string name="text">текст</string>
</resources>
