<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.ucorp.fizioapp.StatisticsActivity">

    <FrameLayout
        android:id="@+id/listLayout"
        android:layout_width="275dp"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" >
        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/exerciseList"
            android:choiceMode="singleChoice" />
    </FrameLayout>
    <View
        android:id="@+id/verticalLine"
        android:layout_toRightOf="@+id/listLayout"
        android:layout_width="1dip"
        android:layout_height="match_parent"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:background="#FF0000FF" />

    <FrameLayout
        android:id="@+id/typeFilterLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/verticalLine" >
        <RadioGroup
            android:id="@+id/typeFilter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="60dp"
            android:orientation="horizontal" >
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:checked="true"
                android:text="@string/repeatCount"
                android:id="@+id/repeatCount" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/executionCount"
                android:id="@+id/executionCount" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/weight"
                android:id="@+id/weight" />
        </RadioGroup>
    </FrameLayout>
    <FrameLayout
        android:id="@+id/dateFilterLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/typeFilterLayout"
        android:layout_toRightOf="@+id/verticalLine" >
        <RadioGroup
            android:id="@+id/dateFilter"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="140dp"
            android:orientation="horizontal" >
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:checked="true"
                android:text="@string/afterYear"
                android:id="@+id/afterYear" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/afterMonth"
                android:id="@+id/afterMonth" />
            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="10dp"
                android:text="@string/afterWeek"
                android:id="@+id/afterWeek" />
        </RadioGroup>
    </FrameLayout>
    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/dateFilterLayout"
        android:layout_toRightOf="@id/verticalLine" />
</RelativeLayout>
